<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/tvEnterTitle"
        android:textColor="#000"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:text="@string/tvEnterParagraph"
        android:textColor="#000"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/btnEnterJa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEnterJa" />

        <Button
            android:id="@+id/btnEnterEn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEnterEn" />

        <Button
            android:id="@+id/btnEnterCh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEnterCh" />

    </LinearLayout>

    <Button
        android:id="@+id/btnEnterStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/btnEnterStart"
        android:textColor="#000"
        android:textSize="30sp" />

</LinearLayout>